--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -43,6 +43,10 @@ p {
   color: #666;
 }
 
+.highlight-number {
+  color: black;
+}
+
 .teaser .hero-body {
   padding-top: 0;
   padding-bottom: 0;
